# firebolt-cpp-client

./: .gitignore  .releaserc.json  CHANGELOG.md  CMakeLists.txt  COVERITY.md  Makefile.act  NOTICE  README.md  build.sh  build_dependencies.sh  cov_build.sh  coverity_local.sh  firebolt-cpp-client.profile.yaml  lint.sh  package-lock.json  package.json  resolve-review-threads.sh  run-all-test.sh  run-component-tests-local.sh  run-component-tests.sh  run-unit-tests.sh  setup-device-tunnel.sh
.github/: Dockerfile  copilot-instructions.md
.github/actions/setup-mock/: action.yml
.github/mock-firebolt/: config--legacy.json  config.json
.github/scripts/: mk-release-package.sh  run-component-tests.sh  run-cpp-test.sh
.github/workflows/: ci.yml  native_full_build.yml  release.yml
cmake/: FindCurl.cmake  version.cmake
demo/: CMakeLists.txt  FireboltDemoService.cpp  FireboltDemoService.h  build.sh  main.cpp
docs/openrpc/: .gitignore  package-lock.json  package.json
docs/openrpc/openrpc/: discovery.json  display.json  metrics.json  network.json  text_to_speech.json  tts.json
docs/openrpc/the-spec/: firebolt-app-open-rpc.json  firebolt-open-rpc--legacy.json  firebolt-open-rpc.json
include/firebolt/: accessibility.h  actions.h  advertising.h  device.h  discovery.h  display.h  firebolt.h  lifecycle.h  localization.h  metrics.h  network.h  presentation.h  stats.h  texttospeech.h  version.h.in
src/: CMakeLists.txt  accessibility_impl.cpp  accessibility_impl.h  actions_impl.cpp  actions_impl.h  advertising_impl.cpp  advertising_impl.h  device_impl.cpp  device_impl.h  discovery_impl.cpp  discovery_impl.h  display_impl.cpp  display_impl.h  firebolt.cpp  lifecycle_impl.cpp  lifecycle_impl.h  localization_impl.cpp  localization_impl.h  metrics_impl.cpp  metrics_impl.h  network_impl.cpp  network_impl.h  presentation_impl.cpp  presentation_impl.h  stats_impl.cpp  stats_impl.h  texttospeech_impl.cpp  texttospeech_impl.h
src/json_types/: accessibility.h  actions.h  advertising.h  device.h  display.h  jsondata_accessibility_types.h  jsondata_device_types.h  jsondata_discovery.h  jsondata_display_types.h  jsondata_texttospeech_types.h  lifecycle.h  stats.h  texttospeech.h
test/: CMakeLists.txt  ComponentTestsMain.cpp  UnitTestsMain.cpp  utils.cpp  utils.h
test/api_test_app/: CMakeLists.txt  README.md  build.sh  main.cpp
test/api_test_app/apis/: deviceDemo.cpp  discoveryDemo.cpp  displayDemo.cpp  lifecycleDemo.cpp  metricsDemo.cpp
test/api_test_app/cpp/: accessibilityDemo.cpp  accessibilityDemo.h  advertisingDemo.cpp  advertisingDemo.h  chooseInterface.cpp  chooseInterface.h  deviceDemo.cpp  deviceDemo.h  discoveryDemo.cpp  discoveryDemo.h  displayDemo.cpp  displayDemo.h  firebolt-open-rpc.json.in  fireboltDemoBase.cpp  fireboltDemoBase.h  fireboltdemo.cpp  fireboltdemo.h  lifecycleDemo.cpp  lifecycleDemo.h  localizationDemo.cpp  localizationDemo.h  networkDemo.cpp  networkDemo.h  outputstream.h  presentationDemo.cpp  presentationDemo.h  statsDemo.cpp  statsDemo.h  texttospeechDemo.cpp  texttospeechDemo.h
test/component/: accessibilityTest.cpp  actionsGeneratedTest.cpp  advertisingTest.cpp  deviceTest.cpp  discoveryTest.cpp  displayTest.cpp  lifecycleTest.cpp  localizationTest.cpp  metricsTest.cpp  networkTest.cpp  presentationTest.cpp  statsTest.cpp  textToSpeechTest.cpp
test/cpp_test/: CMakeLists.txt  build.sh  main.cpp
test/cpp_test/cpp/: accessibilityDemo.cpp  accessibilityDemo.h  advertisingDemo.cpp  advertisingDemo.h  chooseInterface.cpp  chooseInterface.h  deviceDemo.cpp  deviceDemo.h  discoveryDemo.cpp  discoveryDemo.h  displayDemo.cpp  displayDemo.h  fireboltdemo.cpp  fireboltdemo.h  lifecycleDemo.cpp  lifecycleDemo.h  localizationDemo.cpp  localizationDemo.h  outputstream.h  presentationDemo.cpp  presentationDemo.h  statsDemo.cpp  statsDemo.h  utils.cpp
test/unit/: accessibilityTest.cpp  actionsGeneratedTest.cpp  actionsTest.cpp  advertisingTest.cpp  deviceTest.cpp  discoveryTest.cpp  displayTest.cpp  lifecycleTest.cpp  localizationTest.cpp  metricsTest.cpp  mock_helper.h  networkTest.cpp  presentationTest.cpp  statsTest.cpp  textToSpeechTest.cpp
